# TermArena

./: .gitignore  Makefile  README.md  go.mod  go.sum  run_app.sh
auth/: Cargo.toml  build.rs
auth/src/: main.rs
client/: error.go  main.go
client/communication/: command.go  decode.go  decode_test.go  errors.go  message.go  send.go
client/model/: animation.go  command.go  frames.go  game.go  game_over.go  items.go  lobby.go  login.go  message.go  shop.go  spell.go  spell_selection.go  waiting.go
documentation/: architecture.md  game.md
game/: Cargo.toml  items.toml  rules.toml  rust_debug.txt  spells.toml  stats.toml  walk.py
game/assets/: map.json  map_2.json
game/src/: cell.rs  client.rs  config.rs  main.rs
game/src/board/: board.rs
game/src/entities/: common.rs  minion.rs  mod.rs  player.rs
game/src/errors/: mod.rs
game/src/game/: board.rs  cell.rs  minion_manager.rs  mod.rs  monster_manager.rs  pathfinding.rs  projectile_manager.rs
game/src/game/algorithms/: bresenham.rs  mod.rs  pathfinding.rs
game/src/game/animation/: melee.rs  mod.rs  tower.rs
game/src/game/buffs/: mod.rs  stun_buff.rs
game/src/game/entities/: base.rs  champion.rs  item.rs  minion.rs  mod.rs  monster.rs  projectile.rs  tower.rs
game/src/game/spell/: aoe.rs  fireball.rs  freeze_wall.rs  healing_wave.rs  mod.rs  tests.rs
game/src/manager/: game.rs
game/src/packet/: action_packet.rs  board_packet.rs  end_game_packet.rs  mod.rs  shop_packet.rs  spell_selection_packet.rs  start_packet.rs
server/: main.go
shared/: packet.go  utils.go
simulation/: main.go
(+35 files in other folders)
