[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full", "test-util", "time"] }
rand = "0.9.0"
byteorder = "1.5"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
strum = "0.27"
strum_macros = "0.27"
toml = "0.8"

[[bin]]
name = "client"
path = "src/client.rs"
